--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ h1 {
   margin-top: .3em;
   margin-bottom: 0;
   text-size: 3rem;
+  text-transform: uppercase;
 }
 
 nav ul li {
@@ -37,6 +38,7 @@ h2 {
   color: #b20953;
   text-align: left;
   text-size: 1.875rem;
+  text-transform: uppercase;
 }
 
 p {
