--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ h1 {
   background-color: #ffe500;
   margin-top: .3em;
   margin-bottom: 0;
-  font: normal 3rem;
+  font-size: 3rem;
   text-transform: uppercase;
 }
 
@@ -25,7 +25,7 @@ nav ul li {
   padding: .2em .5em .3em;
   line-height: 1.5;
   margin-bottom: .3em;
-  font: normal 1.125rem;
+  font-size: 1.125rem;
   text-decoration: none;
 }
 
@@ -37,7 +37,7 @@ h2 {
   font-family: Sigmar One, cursive;
   color: #b20953;
   text-align: left;
-  font: normal 1.875rem;
+  font-size: 1.875rem;
   text-transform: uppercase;
 }
 
@@ -45,7 +45,7 @@ p {
   font-family: Georgia, serif;
   color: #2f2d13;
   text-align: left;
-  font: normal .75rem;
+  font-size: .75rem;
 }
 
 footer {
