--- a/css/main.css
+++ b/css/main.css
@@ -36,8 +36,7 @@ h2 {
   color: #b20953;
   text-align: left;
   font-size: 1.875rem;
-  text-transform: uppercase;
-  text-decoration: none;
+  text-transform: uppercase
 }
 
 img {
@@ -60,6 +59,10 @@ footer {
   background-color: #ffe500;
   padding: 0 .75em;
   margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 a:hover {
