--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,8 @@ nav ul li {
   padding: .2em .5em ;
   line-height: 1.5;
   margin-bottom: .3em;
+  margin-left: .5em;
+  margin-right: .5em;
   font-size: 1.125rem;
 }
 
