Add trailing semicolon

--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ h2 {
   color: #b20953;
   text-align: left;
   font-size: 1.875rem;
-  text-transform: uppercase
+  text-transform: uppercase;
 }
 
 img {
