--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ p {
   font-family: Georgia, serif;
   color: #2f2d13;
   text-align: left;
-  font-size: .75rem;
+  font-size: 1rem;
   line-height: 1.5;
   margin: .5em;
 }
