--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ nav ul li {
   display: inline-block;
   border-radius: 4px;
   background-color: #b2a212;
+  color: #eee;
   padding: .2em .5em;
   line-height: 1.5;
   margin-bottom: .3em;
