--- a/css/main.css
+++ b/css/main.css
@@ -21,11 +21,14 @@ nav ul li {
   display: inline-block;
   border-radius: 4px;
   background-color: #b2a212;
-  color: #eee;
   padding: .2em .5em;
   line-height: 1.5;
   margin-bottom: .3em;
   font-size: 1.125rem;
+}
+
+li {
+    color: #eee;
 }
 
 nav ul li a:hover {
