--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ header {
 
 h2 {
   font-family: "Sigmar One";
-  color: #b20953;
+  background-color: #b20953;
   text-align: left;
   font-size: 1.875rem;
   text-transform: uppercase;
