--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,10 @@ ul li a:hover {
   background-color: #cc1465;
 }
 
+ul {
+  padding: 0;
+}
+
 header {
   text-align: center;
   background-color: #ffe500;
