--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ h1 {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 2.5rem;
+  padding-top: .2em;
   text-transform: uppercase;
 }
 
@@ -38,6 +39,7 @@ li {
 
 ul {
   padding: 0;
+  margin-top: 0;
 }
 
 header {
