--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ h2 {
   font-size: 1.775rem;
   text-transform: uppercase;
   margin-left: .3em;
-  margin-bottom: 0;
+  margin-bottom: .4em;
 }
 
 img {
