--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ h1 {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 2.5rem;
-  padding-top: .125em;
+  padding-top: .145em;
   text-transform: uppercase;
 }
 
@@ -56,6 +56,7 @@ h2 {
   text-transform: uppercase;
   margin-left: .3em;
   margin-bottom: .61em;
+  margin-top: 1em;
 }
 
 img {
