--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ h2 {
   text-transform: uppercase;
   margin-left: .3em;
   margin-bottom: .61em;
-  margin-top: 1em;
+  margin-top: .9em;
 }
 
 img {
