--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ h2 {
   text-transform: uppercase;
   margin-left: .3em;
   margin-bottom: .6em;
-  margin-top: .9em;
+  margin-top: 1em;
 }
 
 img {
